[package]
name = "decrypt_revolver_db_passes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "decrypt_pass"
path = "src/decrypt_pass.rs"

[[bin]]
name = "client_extractor"
path = "src/client_extractor.rs"

[dependencies]
base64 = "0.22.1"
thiserror = "1.0.63"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_System_Memory"] }
windows-result = "0.2.0"
